Bug 983497 - Patch 2: Fire updatefound on ServiceWorkerContainers. r=ehsan